<resources>
    <string name="app_name">Device Shelf</string>
    <string name="hello_world_text">Hello world. This is an example program to test out the functionality of Android Studio and Nexus emulator</string>
    <string name="scan_button">Scan QR</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="ask_camera_permission">Need to grand Camera Permission to Scan QR code</string>
    <string name="ask_camera_permission_button">Camera Permission</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="server_response">Waiting for server response</string>
    <string name="confirm">Confirm</string>
    <string name="null_input">null or backend data.</string>
    <string name="device_id">Device ID:</string>
    <string name="scan_title">Scan QR Code</string>
    <string name="device_used">The last user:</string>
    <string name="unknown_scan">Unrecognised/Unknown QR code. Please, try again</string>
    <string name="error">An error has happened</string>
    <string name="no_internet_title">No Internet Connection</string>
    <string name="no_internet_body">Please check your internet connection and try again</string>
    <string name="no_scanned_value">No barcode captured, intent data is null</string>
    <string name="qr_code_input">Input your QR Code</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="error_exception">"OOps.. Something went wrong due to %1$s</string>
    <string name="error_title">ERROR</string>
    <string name="wrong_message">Something went wrong!</string>
    <string name="alert_box_error_title">An error has happened</string>
    <string name="retry_label">Retry</string>
    <string name="exit_label">Exit</string>
    <string name="ok_label">OK</string>
    <string name="tab_to_capture">Tap to capture. Pinch/Stretch to zoom</string>
    <string name="no_detector_dependencies">Detector dependencies are not yet available.</string>
    <string name="null_string">null</string>
    <string name="no_camera_source">Unable to start camera source.</string>
    <string name="sample_multi">Multitracker sample</string>
    <string name="no_last_user">No last user found</string>
    <string name="successfully_registered">Device\nSuccessfully\nRegistered</string>
    <string name="saved_successfully">Device ID saved successfully.</string>
    <string name="retry_button">Retry</string>
    <string name="select_device_id">Select Device ID</string>
</resources>