<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context="dev.sunnat629.barcodescan.ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:visibility="gone"
            tools:visibility="visible"
            android:id="@+id/with_internet_layout"
            android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        <Button
                android:id="@+id/scan_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:enabled="false"
                style="@style/Buttons"
                android:text="@string/scan_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="64dp" app:layout_constraintTop_toBottomOf="@+id/confirm_id_button"
                app:layout_constraintVertical_bias="0.0"/>

        <!--Need to create image for arrow -->
        <TextView
                android:id="@+id/main_spinner_devices"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp"
                android:padding="8dp"
                android:background="@drawable/spinner_text_border"
                android:drawableEnd="@android:drawable/arrow_down_float"
                android:gravity="center"
                android:text="@string/select_device_id"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.35000002"/>


        <Button
                android:id="@+id/confirm_id_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                style="@style/Buttons"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/main_spinner_devices"
                app:layout_constraintStart_toStartOf="@+id/main_spinner_devices"
                app:layout_constraintEnd_toEndOf="@+id/main_spinner_devices"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:id="@+id/no_internet_layout"
            tools:visibility="gone"
            android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        <TextView
                android:id="@+id/server_response_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/server_response" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.40"/>

        <Button
                android:id="@+id/retry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retry_button"
                style="@style/Buttons"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/server_response_text"
                app:layout_constraintEnd_toEndOf="@+id/server_response_text"
                app:layout_constraintStart_toStartOf="@+id/server_response_text" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>